examples/test/testpolicy18361.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18361
  namespace: namespace25
spec:
  podSelector:
    matchLabels:
      key19: value4
      key32: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value18
          key47: value36
      podSelector:
        matchLabels:
          key31: value17
          key27: value36
